# adventofcode2021

./: .azure-pipeline.yml  LICENSE
.azure-pipeline/: build.yml
Day 1/: CMakeLists.txt
Day 1/src/: example.cpp  part1.cpp  part2.cpp
Day 10/: CMakeLists.txt
Day 10/src/: example.cpp  part1.cpp  part2.cpp
Day 2/: CMakeLists.txt
Day 2/src/: example.cpp  part1.cpp  part2.cpp
Day 3/: CMakeLists.txt
Day 3/src/: example.cpp  part1.cpp  part2.cpp
Day 4/: CMakeLists.txt
Day 4/src/: example.cpp  part1.cpp  part2.cpp
Day 5/: CMakeLists.txt
Day 5/src/: example.cpp  part1.cpp  part2.cpp
Day 6/: CMakeLists.txt
Day 6/src/: example.cpp  part1.cpp  part2.cpp
Day 7/: CMakeLists.txt
Day 7/src/: example.cpp  part1.cpp  part2.cpp
Day 8/: CMakeLists.txt
Day 8/src/: example.cpp  part1.cpp  part2.cpp
Day 9/: CMakeLists.txt
Day 9/src/: example.cpp  part1.cpp  part2.cpp
